# ATCG2-Exercise-G06

./: .gitmodules  CMakeLists.txt  defines.h  diffusion.cpp  laplace.hpp  poisson.cpp
